Update cache workflow for improved clarity

--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,22 +1,22 @@
-name: Cache Workflow
+name: CI with Cache
 
 on:
   push:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
       - name: Cache dependencies
-        id: cache
+        id: cache-deps
         uses: actions/cache@v4
         with:
-          path: ~/.cache/demo
+          path: ~/.cache
           key: cache-5edcd6e
 
       - name: prime-cache-5edcd6e
-        run: echo "Cache hit? ${{ steps.cache.outputs.cache-hit }}"
+        run: echo "Cache hit: ${{ steps.cache-deps.outputs.cache-hit }}"
