--- a/.github/workflows/ci-cache.yml
+++ b/.github/workflows/ci-cache.yml
@@ -19,4 +19,4 @@ jobs:
           key: cache-5edcd6e
 
       - name: prime-cache-5edcd6e
-        run: echo "Cache hit: ${{ steps.cache-deps.outputs.cache-hit }}"
+        run: echo "Cache hit ${{ steps.cache-deps.outputs.cache-hit }}"
